--- a/src/index.ejs
+++ b/src/index.ejs
@@ -10,29 +10,16 @@
 <!-- feel free to remove the following - except the script tags at the end -->
 
 <h1>Webpack Babel Starter Kit</h1>
-<p>This is a webpack starter kit with full development &amp; build workflow, more infos in the <a href="https://github.com/topheman/webpack-babel-starter#readme" title="More infos on the README">readme</a>.</p>
-<% if (htmlWebpackPlugin.options.DEVTOOLS !== null) { %>
-<!-- This part will appear if you set DEVTOOLS=true or DEVTOOLS=false when launching an npm task -->
-  <% if (!htmlWebpackPlugin.options.DEVTOOLS) { %>
-  <p class="crop">
-    This starter kit lets you build a version containing all your sourcemaps, so that your visitors (potentials users/contributors)
-    may play directly online with your sourcecode in ES6+ (by adding breakpoints ...).
-  </p>
-  <p><a href="./devtools/" title="Test the version with sourcemaps!">Just click here to see the what's under the hood</a>.</p>
-  <% } else { %>
-  <p class="crop">This is the <strong>Developer version</strong>, containing sourcemaps. <strong>Open your devtools and read/set breakpoints on the original source code!</strong></p>
-  <p><a href="../" title="Back to the production version">Back to the production version</a></p>
-  <% } %>
-<% } %>
+<div class="babel"></div>
+<div class="npm"></div>
+<div class="sass"></div>
 
-<p class="require-ensure">
-  Ever heard of <a href="https://webpack.github.io/docs/code-splitting.html" title="Code splitting & require.ensure with webpack">code splitting into chunks</a> that you could <code>require.ensure</code> on demand ?<br><span class="test-require-ensure">Just click here</span> to see an example.
-</p>
 <footer>
   <p><span id="copyright-year"></span><a href="http://labs.topheman.com/" title="My Projects">labs.topheman.com</a> - Christophe Rosset</p>
   <p>
 
   </p>
+
 </footer>
 <!-- keep the following lines -->
 <% if (!htmlWebpackPlugin.options.MODE_DEV_SERVER) { %><script src="<%= Object.prototype.toString.call(webpack.assetsByChunkName['bundle']) === '[object Array]' ? webpack.assetsByChunkName['bundle'][0] : webpack.assetsByChunkName['bundle'] %>"><% } %></script>
