--- a/src/style/logos.scss
+++ b/src/style/logos.scss
@@ -4,24 +4,30 @@
  */
 @media screen and (min-width:$break-point) {
   body {
+  }
+
+  div {
     background-repeat: no-repeat;
     background-position: center;
     transition: background 0.5s;
+    width: 200px;
+    height: 200px;
   }
-  body.babel {
-    background-image: url('../assets/images/babel-logo.png');
-    background-size: 45%;
+
+  .babel {
+    background-image: url('../assets/images/loading.gif');
+    background-size: 65%;
   }
-  body.npm {
+  .npm {
     background-image: url('../assets/images/npm-logo.png');
-    background-size: 30%;
+    background-size: 60%;
   }
-  body.sass {
+  .sass {
     background-image: url('../assets/images/sass-logo.png');
-    background-size: 40%;
+    background-size: 60%;
   }
-  body.eslint {
+  .eslint {
     background-image: url('../assets/images/eslint-logo.png');
-    background-size: 40%;
+    background-size: 60%;
   }
 }
